tests/sksl/errors/golden/GrNoFragmentProcessorExpressions.cpp
### Compilation failed:

error: 5: ternary expression of opaque type 'fragmentProcessor' not allowed
1 error
